Fix layout issue in TextPageComponent.

--- a/deb/openmediavault/workbench/src/app/core/components/intuition/text-page/text-page.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/intuition/text-page/text-page.component.scss
@@ -10,6 +10,10 @@
     color: $omv-color-primary;
   }
 
+  .mat-card-title-group {
+    padding: $omv-padding $omv-padding 0;
+  }
+
   .mat-card-content {
     padding: $omv-padding;
   }
